<resources>
    <string name="app_name">Cards</string>
    <string name="question_text">Tree</string>
    <string name="answer_text">árbol</string>
    <string name="answer_button_text">Check answer</string>
    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="difficult_button_title">Difficult</string>
    <string name="cards_left_format"> %d cards left</string>
    <string name="subtitle_text">Touch to study</string>
    <string name="no_cards">No card left</string>
    <string name="card_list">Cards list</string>
    <string name="study_button_text"> Study</string>
    <string name="accept_card_edit_button_title">Aceptar</string>
    <string name="cancel_card_edit_button_title">Cancelar</string>
    <string name="id_string">ID: %s </string>
    <string name="question_string">Question: </string>
    <string name="answer_string">Answer: </string>
    <string name="card_question_hint">Write the question here  </string>
    <string name="card_answer_hint">write the answer here </string>
    <string name="decks_nav_menu_title">Decks</string>
    <string name="study_nav_menu_title">Study</string>
    <string name="statistics_nav_menu_title">Statistics</string>
    <string name="about_nav_menu_title">About us</string>
    <string name="author_info">Author: Dongxiang Liu</string>
    <string name="version_info">Version: 1.0.27</string>
    <string name="app_description_info">The application allows you to learn and memorize more efficiently. Create your own decks and cards</string>
    <string name="return_button_text">Go back</string>
    <string name="numElement">Item number or value</string>
    <string name="settings">Settings</string>
    <string name="updateLocal">Download Data</string>
    <string name="updateFirebase">Update Data</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="NoUser">No User Log In</string>


    <string name="repetition_interval"> Repetition: %d  Interval: %d</string>
    <string name="quality_easines"> Quality: %d  Easines: %2$.2f</string>


    <!-- Preference Titles -->
    <string name="decks_header">Decks</string>

    <!-- Maximum number of cards Preferences -->
    <string name="max_number_cards">Maximum number of cards</string>

    <!-- Board Preferences -->
    <string name="board_title">Show board</string>
    <string name="board_summary_on">Board available</string>
    <string name="board_summary_off">Board unavailable</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">Sign Out</string>
    <string name="reload">Reload</string>
    <string name="verify_email">Verify</string>
    <string name="invalid_text">Not a valid username o password</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>

</resources>