<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/log_out"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="Log out"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/updateLocalData"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/updateLocal"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/updateFirebaseData"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/updateFirebase"
        app:showAsAction="never|withText" />

</menu>