<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/about_author_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/author_info"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/about_version_text_view"
            android:layout_below="@id/about_author_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/version_info"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/about_application_description_text_view"
            android:layout_below="@id/about_version_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_description_info"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/about_return_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_application_description_text_view"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

        <Button
            android:id="@+id/return_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/return_button_text" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </RelativeLayout>

</layout>