<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="studyViewModel"
            type="es.uam.eps.dadm.cards.StudyViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/info_text_view"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@{@string/cards_left_format(studyViewModel.cardsLeft)}"
            tools:text="Número de tarjetas restantes" />



        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:text="@{studyViewModel.card.question}"
            tools:text="Texto para el entorno"/>
        <View
            android:id="@+id/separator_view"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="1dp"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator_view"
            android:layout_centerHorizontal="true"
            android:text="@{studyViewModel.card.answer}"
            android:textSize="20sp"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            tools:text="Respuesta para el entorno"/>

        <Button
            android:id="@+id/answer_button"
            android:layout_below="@id/answer_text_view"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{studyViewModel.card.answered ? View.INVISIBLE : View.VISIBLE}"
            android:text="@string/answer_button_text" />

        <LinearLayout
            android:id="@+id/difficulty_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE : View.INVISIBLE}">
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/card_difficulty_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/difficult_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/difficult_button_title" />

                <Button
                    android:id="@+id/doubt_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/doubt_button_title" />
                <Button
                    android:id="@+id/easy_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:text="@string/easy_button_title"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

    </RelativeLayout>
</layout>